[gd_scene load_steps=8 format=2]

[ext_resource path="res://pc_fase_2.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/Lost.S02E01.1080p.BluRay.x265-RARBG.mp4_snapshot_36.10_[2023.04.03_21.57.24].jpg" type="Texture" id=2]
[ext_resource path="res://art/kisspng-bookcase-table-shelf-computer-icons-bookcase-5ac0217f7519c0.3516750815225409274797.png" type="Texture" id=3]
[ext_resource path="res://bookshelf_inside_fase_2.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 109, 138.5 )

[node name="bookshelf_fase_2" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 514, 300 )
scale = Vector2( 0.533333, 0.549537 )
texture = ExtResource( 2 )

[node name="estante" type="Sprite" parent="."]
position = Vector2( 677, 483 )
scale = Vector2( 0.587891, 0.664063 )
texture = ExtResource( 3 )

[node name="previus_room" type="Area2D" parent="."]

[node name="arrow_1" type="CollisionShape2D" parent="previus_room"]
position = Vector2( 57, 325 )
shape = SubResource( 1 )

[node name="arrow_2" type="CollisionShape2D" parent="previus_room"]
position = Vector2( 103, 321 )
shape = SubResource( 2 )

[node name="bookshelf" type="Area2D" parent="."]
position = Vector2( 791, 329 )

[node name="bookshelf_1" type="CollisionShape2D" parent="bookshelf"]
position = Vector2( -112, 127 )
shape = SubResource( 3 )

[node name="bookshelf_inside_fase_2" parent="." instance=ExtResource( 4 )]
margin_left = -2.0
margin_top = 669.0
margin_right = 38.0
margin_bottom = 709.0

[connection signal="mouse_entered" from="previus_room" to="." method="_on_previus_room_mouse_entered"]
[connection signal="mouse_exited" from="previus_room" to="." method="_on_previus_room_mouse_exited"]
[connection signal="mouse_entered" from="bookshelf" to="." method="_on_bookshelf_mouse_entered"]
[connection signal="mouse_exited" from="bookshelf" to="." method="_on_bookshelf_mouse_exited"]
